# robothon2023

./: .gitignore  .gitmodules  Makefile  README.md  requirements.txt
rob_ws/src/board_detection/: CMakeLists.txt  package.xml  setup.py
rob_ws/src/board_detection/src/board_detection/: HSV_collect.py  board_detection.py  my_detection.py  real_time_detect.py  screen_detection.py  yolo_detection.py
rob_ws/src/board_detection/src/board_detection/weights/: best_multiclasses_model.pt
rob_ws/src/models/: CMakeLists.txt  package.xml  setup.py
rob_ws/src/panda_bringup/: CMakeLists.txt  package.xml  setup.py
rob_ws/src/panda_bringup/config/: panda.rviz
rob_ws/src/panda_bringup/launch/: current_pose.launch  execute_tasks.launch  main.launch  panda.launch  perception.launch
rob_ws/src/panda_bringup/scenes/: 101x_setup.json  default.json
rob_ws/src/panda_bringup/tasks/: attach.json  blue_button.json  cable.json  connector.json  default.json  demo.json  door.json  get_current_pose.json  perception.json  probe.json  red_button.json  slider.json  test_carthesian.json
rob_ws/src/panda_bringup/tests/: test_board_detection.py  test_screen_detection.py  test_triangle_detect.py
rob_ws/src/utils/: CMakeLists.txt  package.xml  setup.py
rob_ws/src/utils/src/utils/: datasets.py
scripts/: black.sh  build.sh  install.sh  safe_build.sh  source.sh
sim_ws/src/panda_sim_bringup/: CMakeLists.txt  package.xml
sim_ws/src/panda_sim_bringup/config/: default.rviz  frame.config.rviz  panda.rviz  test_set_joint.rviz
sim_ws/src/panda_sim_bringup/launch/: main.launch  panda_world.launch  rviz.launch
sim_ws/src/panda_sim_bringup/models/: panda_fingertip_cross_nail.stl  task_board.stl  task_board_open_lid.stl
sim_ws/src/panda_sim_bringup/worlds/: panda.world
