<?xml version="1.0" encoding="utf-8"?>
<package format="2">

    <name>models</name>
    <version>0.0.0</version>
    <description>yolo models</description>
    <maintainer email="hugo.borne-pons@accenture.com">hugo.b</maintainer>
    <license>None</license>
    <buildtool_depend>catkin</buildtool_depend>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
  
</package>
