<?xml version="1.0" encoding="utf-8"?>
<package format="2">

    <name>panda_sim_bringup</name>
    <version>0.0.0</version>
    <description>The panda_sim_bringup package</description>

    <maintainer email="hugo.tardiou@accenture.com">Hugo Tardiou</maintainer>
    <author email="hugo.borne-pons@accenture.com">Hugo Borne</author>

    <license>Accenture SAS</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <depend>moveit</depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
    </export>

</package>
